elasticsearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-master
  namespace: log
  labels:
    app: elasticsearch     
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch 
  template:
    metadata:
      labels:
        app: elasticsearch    
    spec:
      terminationGracePeriodSeconds: 120
      containers:
      - name: elasticsearch-master
        image: elasticsearch:7.9.2
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
          name: transport
        resources:
          requests:
            memory: 1000Mi
            cpu: 500m
          limits:
            memory: 1500Mi
            cpu: 1500m
        securityContext:
          capabilities:
            add:
            - IPC_LOCK
        volumeMounts:
        - name : config-data
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          readOnly: true
          subPath: elasticsearch.yml
      volumes:
      - name: config-data
        configMap:
          name: elasticsearch-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: log
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
  - name: transport
    port: 9200
    protocol: TCP
  clusterIP: None
