kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: log 
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: kibana:7.9.2
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 500m
        ports:
        - containerPort: 5601
        volumeMounts:
        - name: config-data
          mountPath: /usr/share/kibana/config/kibana.yml
          readOnly: true
          subPath: kibana.yml
      volumes:
      - name: config-data
        configMap:
          name: kibana-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: log
  labels:
    app: kibana
spec:
  #type: ClusterIP
  type: NodePort
  ports:
  - port: 5601
    targetPort: 5601
    nodePort: 30000
  sessionAffinity: None
  selector:
    app: kibana
